Styled elements visible so far in style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Meal Finder</h1>
     <div class="flex">
       <form class="flex" id="submit">
-        <input type="text" id="search" placeholder='Search for meals or keywords'>
+        <input type="text" class='search' id="search" placeholder='Search for meals or keywords'>
         <button class="search-btn" type='submit'>
           <i class='fas fa-search'></i>
         </button>
